# BASAMAK

./: .gitignore  ATTRIBUTIONS.md  CMakeLists.txt  README.md  rebuild.sh
.github/workflows/: build.yml
Distribution/: GITHUB-GUIDE.md  INSTALL.md  INSTALL.txt  MAKING-WINDOWS-AND-LINUX.md  README.md
Distribution/scripts/: build-linux.sh  build-macos.sh  build-windows.bat  install-linux.sh  install-macos.command  install-windows.bat  package-macos.sh  package-source.sh
Resources/Multisamples/Ajaeng/: A#2.flac  A#3.flac  C3.flac  C4.flac  D#4.flac  F3.flac  G#2.flac  G#3.flac  instrument.basamakinst
Resources/Multisamples/Alto Recorder/: A#3.flac  A#5.flac  C5.flac  D4.flac  D5.flac  E5.flac  E6.flac  F#4.flac  F4.flac  G#4.flac  G#5.flac
Resources/Multisamples/BASS-SR500N/: LICENSE.txt
Resources/Multisamples/Bagpipes/: A#3.flac  A#4.flac  A#5.flac  A#6.flac  A3.flac  A4.flac  A5.flac  A6.flac  B3.flac  B4.flac  B5.flac  B6.flac  C#4.flac  C#5.flac  C#6.flac  C4.flac  C5.flac  C6.flac  C7.flac  D#4.flac  D#5.flac  D#6.flac  D4.flac  D5.flac  D6.flac  E4.flac  E5.flac  E6.flac  F#4.flac  F#5.flac  F#6.flac  F4.flac  F5.flac  F6.flac  G#3.flac  G#4.flac  G#5.flac  G#6.flac  G3.flac  G4.flac  (+3 more)
Resources/Multisamples/Balafon/: C#3 v3.flac  C#4 v2.flac  C#4.flac  C4 v3.flac  C4.flac  C5 v2.flac  C6 v2.flac  C6 v3.flac  C6.flac  F4 v2.flac  F4 v3.flac  F4.flac  F5 v2.flac  F5 v3.flac  F5.flac  F6 v2.flac
Resources/Multisamples/Banjo/: A#2.flac  A#3.flac  A#4.flac  A2.flac  A3.flac  B2.flac  B3.flac  B4.flac  C#3.flac  C#4.flac  C4.flac  D#2.flac  D#3.flac  D#4.flac  D3.flac  E2.flac  E3.flac  F#2.flac  F#3.flac  F2.flac  F3.flac  G#2.flac  G#3.flac  G#4.flac  G2.flac  G3.flac  G4.flac  LICENSE.txt
Resources/Multisamples/Baritone Sax/: A#2 v2.flac  A#2.flac  A#3 v2.flac  A#3.flac  A2 v2.flac  A2.flac  A3 v2.flac  A3.flac  B2 v2.flac  B2.flac  B3 v2.flac  B3.flac  C#2 v2.flac  C#2.flac  C#3 v2.flac  C#3.flac  C#4 v2.flac  C#4.flac  C3 v2.flac  C3.flac  C4 v2.flac  C4.flac  D#2 v2.flac  D#2.flac  D#3 v2.flac  D#3.flac  D#4 v2.flac  D#4.flac  D2 v2.flac  D2.flac  D3 v2.flac  D3.flac  D4 v2.flac  D4.flac  E2 v2.flac  E2.flac  E3 v2.flac  E3.flac  E4 v2.flac  E4.flac  (+24 more)
Resources/Multisamples/Bassoon Real/: A#0.flac  A#1 v2.flac  A#2 v2.flac  A#2.flac  A1.flac  A2 v2.flac  A3.flac  A4 v2.flac  C#2 v2.flac  C#2.flac  C3 v2.flac  C3.flac  C4 v2.flac  C4.flac  C5.flac  D#3 v2.flac  D#3.flac  D#4.flac  F2 v2.flac  F2.flac  G#4 v2.flac  G#4.flac  G2 v2.flac  G2.flac
Resources/Multisamples/Bowed Psaltery/: C5.flac  C6.flac  D5.flac  F#4.flac  G#5.flac  instrument.basamakinst
Resources/Multisamples/Bronze Bells/: A#4.flac  A4.flac  B3.flac  B4.flac  C#3.flac  C3.flac  C4.flac  D#1.flac  D#2.flac  D#3.flac  D#4.flac  D#5.flac  D4.flac  D5.flac  E4.flac  F#4.flac  F4.flac  G#4.flac  G1.flac  G2.flac  G4.flac  G5.flac  instrument.basamakinst
Resources/Multisamples/Cathedral Organ/: A2.flac  A4.flac  A5.flac  C2.flac  C4.flac  C5.flac  C6.flac  D#2.flac  D#3.flac  D#4.flac  D#6.flac  F#1.flac  F#2.flac  F#4.flac  F#6.flac  instrument.basamakinst
Resources/Multisamples/Cello Section/: A2 v2.flac  A2.flac  B2 v2.flac  B2.flac  B4 v2.flac  B4.flac  C2 v2.flac  C2.flac  C4 v2.flac  C4.flac  D2 v2.flac  D3.flac  D4 v2.flac  D5.flac  E1.flac  E2 v2.flac  E3 v2.flac  E3.flac  F2.flac  F3 v2.flac  F4.flac  F5 v2.flac  G2 v2.flac  G2.flac  G4 v2.flac  G4.flac
Resources/Multisamples/Choir Aahs/: A5.flac  instrument.basamakinst
Resources/Multisamples/Clarinet Real/: A#2 v2.flac  A#3 v2.flac  A#3.flac  A#4 v2.flac  A#4.flac  D2 v2.flac  D2.flac  D4 v2.flac  D4.flac  D5 v2.flac  D6.flac  F#5 v2.flac  F#6.flac  F2 v2.flac  F2.flac  F3 v2.flac  F4 v2.flac  F4.flac
Resources/Multisamples/Concert Harp/: A2 v2.flac  A2.flac  A4 v2.flac  A4.flac  A6 v2.flac  A6.flac  B1 v2.flac  B1.flac  B3 v2.flac  B3.flac  B5 v2.flac  B5.flac  B6 v2.flac  B6.flac  C5 v2.flac  C5.flac  D2 v2.flac  D2.flac  D4 v2.flac  D4.flac  D6 v2.flac  D6.flac  D7.flac  E1.flac  E3 v2.flac  E3.flac  E5 v2.flac  E5.flac  F2 v2.flac  F2.flac  F4 v2.flac  F4.flac  F6 v2.flac  F6.flac  F7.flac  G1.flac  G3 v2.flac  G3.flac  G5 v2.flac  G5.flac
Resources/Multisamples/Da Loo Ne/: LICENSE.txt  instrument.basamakinst
Resources/Multisamples/Dan Tranh/: B2 v2.flac  B2 v3.flac  B2.flac  B3 v2.flac  B3.flac  B4 v3.flac  B4.flac  B5 v2.flac  B5 v3.flac  C#2 v2.flac  C#2 v3.flac  C#2.flac  C#3 v3.flac  C#4 v2.flac  C#4 v3.flac  C#4.flac  C#5.flac  D#3 v2.flac  D#3 v3.flac  D#3.flac  D#4 v2.flac  D#4 v3.flac  D#5.flac  F#2 v3.flac  F#2.flac  F#3 v2.flac  F#3 v3.flac  F#4 v2.flac  F#4 v3.flac  F#4.flac  (+7 more)
Resources/Samples/: Sample attributions.md  Sample attributions.txt
Resources/TouchOSC/: BASAMAK-Ch1-8x8.tosc  TouchOSC-README.txt
Resources/launchpad+launchkey custom midi modes/: launchkey mk4 61 encoders.syx  launchkey mk4 61 faders.syx  launchkey mk4 61 pads.syx  launchpad mini pads.syx
Source/dsp/: Adaa.h  DrumChannel.cpp  DrumChannel.h  DrumGen.h  FDNReverb.h  GenContext.h  GenStyle.h  NamWrapper.cpp  NamWrapper.h  PartGen.h  Sequencer.cpp  Sequencer.h  SincTable.h  SpectrumTap.h
Source/midi/: LaunchpadController.cpp  LaunchpadController.h  MidiLearnManager.cpp  MidiLearnManager.h
Source/plugin/: FactoryContent.cpp  FactoryContent.h  PluginProcessor.cpp  PluginProcessor.h  UserPaths.h
Source/ui/: FactoryMidiMaps.h  PluginEditor.cpp  PluginEditor.h  StepGridComponent.cpp
docs/: ARCHITECTURE.md  CODE-MAP.md  DECISIONS.md  FEATURES.md  GENERATE-THEORY.md  RELEASE-1.1.0.md  RELEASE-1.2.0.md  STYLES.md  generate-calibration.md
docs/audits/: bank-similarity.txt
tests/: AliveTest.cpp  ArpTest.cpp  BankAudit.cpp  DuckTest.cpp  GateWrapTest.cpp  GenTest.cpp  GlideTest.cpp  GrainTest.cpp  LiveRollTest.cpp  LockDefaultCheck.cpp  LockPitchTest.cpp  MergeTest.cpp  MixDump.cpp  ModMatrixTest.cpp  MsProbe.cpp  NamTest.cpp  NudgeTest.cpp  PRollTest.cpp  PatternCountTest.cpp  PolyTest.cpp  PresetTest.cpp  RollAbsoluteTest.cpp  SlotNoteTest.cpp  TunerTest.cpp  UIAudit.cpp  VoiceMapTest.cpp  WaveguideTest.cpp  WavetableTest.cpp  run.sh
(+1253 files in other folders)
